tests/errors/syn_for6.java
public class syn_for6 {
public static void main(String[] args){
for ; ; ) {
 
}
}
}